--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/SallesCaio/nodeTest#readme",
   "dependencies": {
-    "fastify": "^5.5.0"
+    "fastify": "^5.5.0",
+    "postgres": "^3.4.7"
   }
 }
