--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/SallesCaio/nodeTest#readme",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
+    "pg": "^8.16.3",
     "postgres": "^3.4.7"
   }
 }
